Fix logo distortion

--- a/src/stylesheets/_components.site-header.scss
+++ b/src/stylesheets/_components.site-header.scss
@@ -8,3 +8,7 @@
 /*div*/.#{$sagovau-namespace}site-header__quick-links {
     right: $sagovau-spacing-unit-base;
 }
+
+/*div*/.#{$sagovau-namespace}site-header__logo {
+    max-width: none;
+}
