--- a/src/stylesheets/_settings.general.scss
+++ b/src/stylesheets/_settings.general.scss
@@ -18,8 +18,8 @@
 
 $sagovau-file-prefix: 'bg';
 
-$sagovau-path-png: '../images/';
-$sagovau-path-svg: '../images/';
+$sagovau-path-png: '';
+$sagovau-path-svg: '';
 
 
 
